# searchpipeline-events

./: .gitignore  README.md  pyproject.toml
examples/: pattern_matcher_example.py  query_executor_example.py
src/searchpipeline_events/: __init__.py  client.py  clients.py  data_collection_client.py  decorators.py  schemas.py
tests/: __init__.py  conftest.py  test_client.py  test_clients.py  test_decorators.py  test_schemas.py
